--- a/Calendar/Calendar.Windows/StartPage.xaml
+++ b/Calendar/Calendar.Windows/StartPage.xaml
@@ -9,10 +9,9 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-    Loaded="pageRoot_Loaded"
     NavigationCacheMode="Disabled"
     >
-    <Grid Background="#FFce3636">
+    <Grid Background="#FFce3636" Name="myGrid">
         <Image gif:AnimationBehavior.SourceUri="Assets/301.gif"
                  HorizontalAlignment="Center" VerticalAlignment="Center" 
                 Width="100" Height="100"/>
