--- a/Calendar/Calendar.Windows/MainPage.xaml
+++ b/Calendar/Calendar.Windows/MainPage.xaml
@@ -5,7 +5,7 @@
     xmlns:local="using:Calendar"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:UI="using:Microsoft.Advertising.WinRT.UI"
+    xmlns:adduplex="using:AdDuplex.Universal.Controls.Win.XAML"
     mc:Ignorable="d" 
     MinWidth="1000"
     Loaded="Page_Loaded"    
@@ -456,13 +456,9 @@
                     </FlyoutBase.AttachedFlyout>
                 </ListView>
                 <StackPanel Name="AdStack" HorizontalAlignment="Center" Width="730" Height="90">
-                    <UI:AdControl Name="adControl"
-                        ApplicationId="0252394b-e6cb-45f0-8b40-7382fe45973c" 
-                      AdUnitId="11579726" 
-                      HorizontalAlignment="Center" 
-                      Height="90" 
-                      VerticalAlignment="Top" 
-                      Width="728"/>
+                    <adduplex:AdControl Name="adControl" AdUnitId="194375" 
+                                        AppKey="30ca9619-1a41-46af-9be2-11a829398fad" 
+                                        Size="728x90"/>
                 </StackPanel>
                 <StackPanel Name="GoToDate" 
                           VerticalAlignment="Bottom" 
